--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "parameters-middleware": "^0.1.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
-    "rxjs-es": "^5.0.0-beta.12"
+    "rxjs": "^5.0.0-rc.4"
   },
   "scripts": {
     "start": "node ./server.js",
