--- a/package.json
+++ b/package.json
@@ -36,7 +36,12 @@
   },
   "private": false,
   "devDependencies": {
-    "eslint": "^2.12.0",
+    "babel-eslint": "^7.1.1",
+    "eslint": "^3.11.0",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.7.1",
     "nodemon": "^1.9.2"
   }
 }
