--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async": "^2.1.2",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.1",
+    "cheerio": "^0.22.0",
     "cors": "^2.7.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
